Overflow issue fixed. Comprehensive Google Map Plugin is now working correctly.

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ Tags:
 /* Begin Typography & Colors */
 
 /* Default */
-html,body,section,header,div,h1,h2,ul,li { margin: 0px; padding: 0px; overflow: hidden; }
+html,body,section,header,div,h1,h2,ul,li { margin: 0px; padding: 0px; }
 
 /* Body */
 html { background-color: #ededed; font-family: sans-serif, tahoma, verdana, arial; font-size: 13px; overflow: auto; }
@@ -33,6 +33,7 @@ body>header nav li { display: inline-block; margin-left: 20px; }
 
 /* Sidebar */
 body>aside { width: 300px; float: right; position: relative; top: -25px; }
+body>aside .widget { overflow: hidden; }
 body>aside .widget h1 { padding-left: 10px; }
 body>aside .widget ul { margin: 0px; padding: 0px 0px 0px 15px; }
 body>aside .widget li { background-color: #CECECE; margin: 2.5px 5px 0px 0px; padding-right: 15px; }
@@ -66,7 +67,7 @@ body>aside .widget .gflag { margin: 5px 2.5px; }
 #main .twoboxbar.about#about2 { float: right; }
 
 /* Three box */
-#main .threebox { width: 231px; height: 231px; cursor: pointer; float: left; }
+#main .threebox { width: 231px; height: 231px; cursor: pointer; float: left; overflow: hidden; }
 #main .threebox,#main .threebox a { font-size: 20px; font-weight: bold; text-decoration: none; text-transform: uppercase; color: #fff; }
 #main .threebox .date { font-size: 0.75em; margin: 5px 0px 5px 5px; }
 #main .threebox .title { margin: 0px 0px 5px 5px; font-size: 24px; }
